[package]
name = "benchmarks"
version = "0.1.0"
authors = ["xxks-kkk <ferrishu3886@gmail.com>"]
edition = "2018"

[dependencies]
spdk-rs = { path="../spdk-rs"}
failure = "0.1.3"
failure_derive = ""
tokio = { version = "0.1.13", features = ["async-await-preview"]}
futures = "0.3.6"
tokio-async-await = "0.1.4"
toml = "0.4.10"
futures-await = "0.1"
utils_rustfs = { package = "utils", path="../utils"}
log = "0.4"
env_logger = "0.6.0"
libc = "0.2"
colored = "1.7"
sha2 = "0.8.0"
rand = "0.6"