[package]
name = "spdk-rs"
version = "0.1.0"
authors = ["xxks-kkk <ferrishu3886@gmail.com>"]
edition = '2018'

[dependencies]
libspdk-sys = { path = "libspdk-sys" }
failure = "0.1.2"
libc = "0.2.43"
hamcrest2 = "0.2.3"
tokio = { version = "0.1.13", features = ["async-await-preview"]}
futures = "0.1.25"
tokio-async-await = "0.1.4"